gibbon-compiler/examples/error/test27b_subst.gib
#lang gibbon

(require "../../ASTBenchmarks/grammar_racket.gib")
(require "../../ASTBenchmarks/substitution/treelang/subst_gibbon.gib")

(subst (quote hi)
       (quote hello)
       (Expression (VARREF (quote hi))))
